--- a/templates/check_apiserver.sh.j2
+++ b/templates/check_apiserver.sh.j2
@@ -6,7 +6,7 @@ errorExit() {
 testUrl() {
     curl --silent --max-time 2 --insecure "$1" --cert '{{ rke2_data_path }}/server/tls/client-ca.crt' --key '{{ rke2_data_path }}/server/tls/client-ca.key' -o /dev/null || errorExit "Error GET $1"
 }
-testUrl 'https://localhost:{{ rke2_apiserver_dest_port }}/healthz'
-if ip addr | grep -wq '{{ rke2_api_ip }}'; then
-    testUrl 'https://{{ rke2_api_ip | ansible.utils.ipwrap }}:{{ rke2_apiserver_dest_port }}/healthz'
+testUrl 'https://localhost:{{ cluster['api_dest_port'] }}/healthz'
+if ip addr | grep -wq '{{ cluster['api_ip'] }}'; then
+    testUrl 'https://{{ cluster['api_ip'] | ansible.utils.ipwrap }}:{{ cluster['api_dest_port'] }}/healthz'
 fi
