--- a/templates/check_rke2server.sh.j2
+++ b/templates/check_rke2server.sh.j2
@@ -7,12 +7,6 @@ testUrl() {
     curl --silent --max-time 2 --insecure "$1" -o /dev/null || errorExit "Error GET $1"
 }
 testUrl https://localhost:9345/
-{% if rke2_api_private_ip is defined %}
-if ip addr | grep -wq '{{ rke2_api_private_ip }}'; then
-    testUrl 'https://{{ rke2_api_private_ip | ansible.utils.ipwrap}}:{{ rke2_api_private_port }}/'
+if ip addr | grep -wq '{{ cluster['api_ip'] }}'; then
+    testUrl 'https://{{ cluster['api_ip'] | ansible.utils.ipwrap}}:9345/'
 fi
-{% else %}
-if ip addr | grep -wq '{{ rke2_api_ip }}'; then
-    testUrl 'https://{{ rke2_api_ip | ansible.utils.ipwrap}}:9345/'
-fi
-{% endif %}
