--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -30,12 +30,12 @@ vrrp_script chk_rke2server {
 vrrp_instance VI_1 {
     interface {{ ansible_default_ipv4.interface | default(ansible_default_ipv6.interface) }}
     virtual_router_id 11
-{% if groups[rke2_servers_group_name].0 == inventory_hostname|string() %}
+{% if groups[cluster['servers_group']].0 == inventory_hostname|string() %}
     state MASTER
 {% else %}
     state BACKUP
 {% endif %}
-{% for host in groups[cluster['servers_group'] %}
+{% for host in groups[cluster['servers_group']] %}
     {%- if host|string() == inventory_hostname|string() %}
     priority {{ 150 - loop.index0 }}
     {% endif -%}
@@ -43,7 +43,7 @@ vrrp_instance VI_1 {
     advert_int 1
     unicast_src_ip {{ ansible_default_ipv4.address | default(ansible_default_ipv6.address) }}
     unicast_peer {
-{% for host in groups[cluster['servers_group'] %}
+{% for host in groups[cluster['servers_group']] %}
 {% if host|string() != inventory_hostname|string() %}
         {{ hostvars[host]['ansible_default_ipv4']['address'] | default(hostvars[host]['ansible_default_ipv6']['address'] ) }}
 {% endif %}
