--- a/templates/rke2-server.env.j2
+++ b/templates/rke2-server.env.j2
@@ -1,4 +1,4 @@
 HOME=/root
-http_proxy={{ proxy_http_proxy }}
-https_proxy={{ proxy_https_proxy }}
-no_proxy={{ proxy_no_proxy }}
+http_proxy={{ proxy['http_proxy'] }}
+https_proxy={{ proxy['https_proxy'] }}
+no_proxy={{ proxy['no_proxy'] }}
