--- a/templates/config.yaml.j2
+++ b/templates/config.yaml.j2
@@ -9,4 +9,4 @@ cluster-cidr: {{ cluster['pod_cidr'] }}
 service-cidr: {{ cluster['service_cidr'] }}
 cluster-dns: {{ cluster['dns'] }}
 node-ip: {{ hostvars[inventory_hostname]['node_ip'] }}
-advertise-address: {{ hostvars[inventory_hostname]['node_ip'] }}
+advertise-address: {{ cluster['api_ip'] }}
