fix proxy strings

--- a/templates/rke2-agent.env.j2
+++ b/templates/rke2-agent.env.j2
@@ -1,4 +1,4 @@
 HOME=/root
-http_proxy={{ proxy['http_proxy'] }}
-https_proxy={{ proxy['https_proxy'] }}
+http_proxy={{ proxy['http_proxy']['protocol'] }}://{{ proxy['http_proxy']['server'] }}:{{ proxy['http_proxy']['port'] }}
+https_proxy={{ proxy['https_proxy']['protocol'] }}://{{ proxy['https_proxy']['server'] }}:{{ proxy['https_proxy']['port'] }}
 no_proxy={{ proxy['no_proxy'] }}
